@@ -2,8 +2,7 @@ TODO list for openclass
 
 
 For version 1.0:
-- when sending files to student, give an option between saving then or
-  opening directly
+- Within notification window, allow to open received files.
 
 For future versions:
 
