@@ -1,3 +1,5 @@
+- when sending files to student, give an option between saving then or opening directly
+
 0.3.1:
  - properly open files and links on windows
  - simplify installation of icons
